2004-04-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Added descriptions of "focus-on-click", "xalign"
	and "yalign" propertiees for GTK+ 2.4. Added descriptions of the
	set_alignment(), get_alignment(), set_focus_on_click() and
	get_focus_on_click() methods available in PyGTK 2.4

	* pygtk-gtkbuttonbox.xml Add description of get_child_secondary()
	method available in PyGTK 2.4.

2004-04-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelgroup.xml Added descriptions of connect_by_path()
	method,	and accel_map_add_entry(), accel_map_lock_path and
	accel_map_unlock_path() functions.

	* pygtk-gtkalignment.xml Fix small bug in get_padding() description.

2004-03-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml Add description of set_padding() and
	get_padding() methods available in PyGTK 2.4

2004-03-30  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderertoggle.xml Add description of "inconsistent"
	property added in GTK+ 2.2. Update other property descriptions.

	* pygtk-gtkcheckmenuitem.xml Add description of "draw-as-radio"
	property fro GTK+ 2.4 and add PyGTK2.4 methods set_draw_as_radio() and
	get_draw_as_radio().

2004-03-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelgroup.xml Add documentation on the connect() method.
	Add a description of the return value for the "accel-activate" signal.

	* pygtk-gtkadjustment.xml Add description of properties available in
	GTK+2.4. Reformat the Attributes description.

	* pygtk-gtkalignment.xml Add description of padding properties
	available in GTK+ 2.4.

	* pygtk-gtkaccessible.xml Added one line description.

	* pygtk-gtkcalendar.xml Added description of properties available in
	GTK+2.4.

	* pygtk-gtkcellrenderertext.xml Added description of properties
	available in GTK+2.4.

2004-03-25  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml Remove description of atom_intern function.

	* pygtk-gdk-function.xml Add description of atom_intern function. Fixes