@@ -8,6 +8,10 @@
 	* pygtk-gtkbuttonbox.xml Add description of get_child_secondary()
 	method available in PyGTK 2.4.
 
+	* pygtk-gtkcalendar.xml Add descriptions of get_display_options() and
+	set_display_options() methods available in PyGTK 2.4. Add deprecation
+	warning for display_options() method.
+
 2004-04-01  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkaccelgroup.xml Added descriptions of connect_by_path()
